--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,1 +1,15 @@
 @charset "utf-8";
+
+html {
+    font-size: 10px;
+}
+
+body {
+    font-size: 1.6rem;
+}
+
+.container {
+    margin-top: 6rem;
+}
+
+/* 下面开发你的代码 */
