--- a/views/competition.html
+++ b/views/competition.html
@@ -5,9 +5,72 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>物联网创意大赛 - 翼灵</title>
-    <link rel="short icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
+    <link rel="stylesheet" href="../public/lib/bootstrap.min.css">
+    <link rel="stylesheet" href="../public/stylesheets/main.css">
 </head>
 <body>
+    <!-- nav -->
+    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="#">物联网创意大赛</a>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown02">
+                        <a class="dropdown-header" href="#">翼灵物联工作室</a>
+                        <a class="dropdown-item" href="#">翼灵官网</a>
+                        <a class="dropdown-item" href="#">培养方向</a>
+                        <a class="dropdown-item" href="#">创意大赛</a>
+                        <a class="dropdown-item" href="#">开源空间</a>
+                        <a class="dropdown-item" href="#">招新系统</a>
+                        <a class="dropdown-item" href="#">考试系统</a>
+                        <a class="dropdown-item" href="#">翼灵一家人</a>
+                    </div>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">导航1 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">导航2</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">导航3</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">导航4</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">导航5</a>
+                </li>
+            </ul>
+            <form class="form-inline mt-2 mt-md-0">
+                <input class="form-control mr-sm-2" type="text" placeholder="Search">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
+    </nav>
 
+    <div class="container">
+        <div class="jumbotron">
+            <h1>Hello World</h1>
+            <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser's viewport.</p>
+            <a class="btn btn-lg btn-primary" href="#" role="button">View navbar docs &raquo;</a>
+        </div>
+    </div>
+
+
+    <!-- footer-->
+    <footer>
+        &copy; <span>2017</span>
+        &hearts; <a href="#" target="_blank">翼灵物联工作室</a>
+        &hearts; <a href="#" target="_blank">yyq</a>
+    </footer>
+
+<script src="../public/lib/jquery-3.2.1.min.js"></script>
+<script src="../public/lib/bootstrap.min.js"></script>
 </body>
 </html>
