--- a/views/competition.html
+++ b/views/competition.html
@@ -18,19 +18,6 @@
         <a class="navbar-brand" href="#">物联网创意大赛</a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
-                    <div class="dropdown-menu" aria-labelledby="dropdown02">
-                        <a class="dropdown-header" href="#">翼灵物联工作室</a>
-                        <a class="dropdown-item" href="#">翼灵官网</a>
-                        <a class="dropdown-item" href="#">培养方向</a>
-                        <a class="dropdown-item" href="#">创意大赛</a>
-                        <a class="dropdown-item" href="#">开源空间</a>
-                        <a class="dropdown-item" href="#">招新系统</a>
-                        <a class="dropdown-item" href="#">考试系统</a>
-                        <a class="dropdown-item" href="#">翼灵一家人</a>
-                    </div>
-                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#">导航1 <span class="sr-only">(current)</span></a>
                 </li>
@@ -46,27 +33,42 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">导航5</a>
                 </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">关于我们</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown02">
+                        <span class="dropdown-header">翼灵物联工作室</span>
+                        <a class="dropdown-item" href="#">翼灵官网</a>
+                        <a class="dropdown-item" href="#">培养方向</a>
+                        <a class="dropdown-item" href="#">创意大赛</a>
+                        <a class="dropdown-item" href="#">开源空间</a>
+                        <a class="dropdown-item" href="#">招新系统</a>
+                        <a class="dropdown-item" href="#">考试系统</a>
+                        <a class="dropdown-item" href="#">翼灵一家人</a>
+                    </div>
+                </li>
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
 
-    <div class="container">
-        <div class="jumbotron">
-            <h1>Hello World</h1>
-            <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser's viewport.</p>
-            <a class="btn btn-lg btn-primary" href="#" role="button">View navbar docs &raquo;</a>
-        </div>
-    </div>
-
     <!-- footer-->
     <footer>
-        &copy; <span>2017</span>
-        &hearts; <a href="#" target="_blank">翼灵物联工作室</a>
-        &hearts; <a href="#" target="_blank">yyq</a>
+        <div>
+            <p class="h5">翼灵物联工作室</p>
+        </div>
+        <ul>
+            <li>翼灵官网</li>
+            <li>培养方向</li>
+            <li>创意大赛</li>
+            <li>开源空间</li>
+            <li>招新系统</li>
+            <li>考试系统</li>
+            <li>翼灵一家人</li>
+        </ul>
+        <div>
+            &copy; <span>2017</span>
+            &hearts; <a href="#" target="_blank">翼灵物联工作室</a>
+            &hearts; <a href="#" target="_blank">yyq</a>
+        </div>
     </footer>
 
 <script src="../public/lib/jquery-3.2.1.min.js"></script>
