--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -20,7 +20,7 @@ nav{
 .container{
     margin-top:30px;
     margin-bottom:30px;
-    background-color:#cccccc;
+    /*background-color:#cccccc;*/
     padding:20px;
 
 }
