--- a/src/main/resources/views/competition.html
+++ b/src/main/resources/views/competition.html
@@ -105,13 +105,10 @@
                                 <div class="thumbnail">
                                     <img src="../public/img/s-p1.jpg">
                                     <div class="caption">
-                                        <p>
-                                            <b>特等奖</b><br/>
-                                            <span>
-
-                                王俊沣<br/>
-                                通过智能手环提前检测癫痫发作时间<br/>
-                                </span>
+                                        <p class="text-primary"><b>特等奖</b>
+                                        <a href="#" class="btn btn-block btn-sm text-sm-left btn-warning" role="button">
+                                            learn more...
+                                        </a>
                                         </p>
                                     </div>
                                 </div>
@@ -303,7 +300,6 @@
         <div class="container background-light-blue">
             <div class="row">
                 <div class="col-ms-4 col-md-4  col-lg-4" id="address">
-
                     <address>
                         <b>Address</b><br>
                         西南石油大学, 明理楼.<br>
