modify CompetitionSite html structure

--- a/src/main/resources/views/competition.html
+++ b/src/main/resources/views/competition.html
@@ -286,44 +286,44 @@
         </div>
     </main>
     <!-- footer-->
-    <div id="footer" class="container-fluid">
-        <div class="container background-light-blue">
+    <div id="footer" class="container-fluid background-light-blue">
+        <div class="container">
+            <h3>翼灵物联工作室</h3>
+            <p class="lead">欢迎访问我们的各个站点</p>
+            <hr class="m-y-md">
             <div class="row">
-                <div class="col-ms-4 col-md-4  col-lg-4" id="address">
-
-                    <address>
-                        <b>Address</b><br>
-                        西南石油大学, 明理楼.<br>
-                        C1011<br>
-                        翼灵物联网工作室<br>
-                        <abbr title="Phone">联系电话:</abbr> (123) 456-7890
-                    </address>
-                    <address>
-                        <strong>Full Name</strong><br>
-                        <a href="mailto:#">mailto@somedomain.com</a>
-                    </address>
-                    <div>
-                        &copy; <span>2017</span>
-                        &hearts; <a href="#" target="_blank">翼灵物联工作室</a>
-                        &hearts; <a href="#" target="_blank">yyq</a>
-                    </div>
-
-                </div>
-                <div class="col-ms-4 col-md-4 col-lg-4" id="office">
-                    <b>翼灵物联工作室</b>
-                    <ul>
-                        <li>翼灵官网</li>
-                        <li>培养方向</li>
-                        <li>创意大赛</li>
-                        <li>开源空间</li>
-                        <li>招新系统</li>
-                        <li>考试系统</li>
-                        <li>翼灵一家人</li>
-                    </ul>
-                </div>
+                <a href="#" target="_blank" class="website-link col-md-3 text-center">
+                    <img src="http://dummyimage.com/150x150/4d494d/686a82.gif&text=placeholder+image" alt="翼灵官网" class="website-item"/>
+                </a>
+                <a href="#" target="_blank" class="website-link col-md-3 text-center">
+                    <img src="http://dummyimage.com/150x150/4d494d/686a82.gif&text=placeholder+image" alt="翼灵官网" class="website-item"/>
+                </a>
+                <a href="#" target="_blank" class="website-link col-md-3 text-center">
+                    <img src="http://dummyimage.com/150x150/4d494d/686a82.gif&text=placeholder+image" alt="翼灵官网" class="website-item"/>
+                </a>
+                <a href="#" target="_blank" class="website-link col-md-3 text-center">
+                    <img src="http://dummyimage.com/150x150/4d494d/686a82.gif&text=placeholder+image" alt="翼灵官网" class="website-item"/>
+                </a>
+                <a href="#" target="_blank" class="website-link col-md-3 text-center">
+                    <img src="http://dummyimage.com/150x150/4d494d/686a82.gif&text=placeholder+image" alt="翼灵官网" class="website-item"/>
+                </a>
+                <a href="#" target="_blank" class="website-link col-md-3 text-center">
+                    <img src="http://dummyimage.com/150x150/4d494d/686a82.gif&text=placeholder+image" alt="翼灵官网" class="website-item"/>
+                </a>
+                <a href="#" target="_blank" class="website-link col-md-3 text-center">
+                    <img src="http://dummyimage.com/150x150/4d494d/686a82.gif&text=placeholder+image" alt="翼灵官网" class="website-item"/>
+                </a>
             </div>
         </div>
-
+        <div class="container">
+            <h3>联系我们</h3>
+            <hr class="m-y-md">
+            <address>
+                <p class="lead">地址: <span class="small">西南石油大学·明理楼C·1011</span></p>
+                <p class="lead">官方QQ: <span class="small">3465459890</span></p>
+                <p class="lead">GitHub: <span class="small"><a href="https://github.com/YiLing-IOT-Studio/" target="_blank">YiLing-IOT-Studio</a> </span></p>
+            </address>
+        </div>
     </div>
 
 
