--- a/src/main/resources/public/stylesheets/main.css
+++ b/src/main/resources/public/stylesheets/main.css
@@ -48,5 +48,16 @@ ul{
     background-color:lightblue;
 }
 
+.website-link {
+    display: inline-block;
+}
+
+.website-item {
+    border-radius: 100%;
+    width: 120px;
+    height: 120px;
+    margin: 40px;
+}
+
 
 /* 下面开发你的代码 */
